tweak in responsive css on opening-hours

--- a/src/app/components/opening-hours/opening-hours.component.css
+++ b/src/app/components/opening-hours/opening-hours.component.css
@@ -59,7 +59,13 @@ th {
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 370px) {
+  th,
+  td {
+    padding: 18px;
+  }
+}
+@media (max-width: 310px) {
   th,
   td {
     padding: 10px;
